--- a/GameSearch.xcodeproj/xcshareddata/xcschemes/GameSearch.xcscheme
+++ b/GameSearch.xcodeproj/xcshareddata/xcschemes/GameSearch.xcscheme
@@ -39,6 +39,9 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
+      enableGPUShaderValidationMode = "2"
+      showGraphicsOverview = "Yes"
+      logGraphicsOverview = "Yes"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
