--- a/GameSearch/GoogleService-Info.plist
+++ b/GameSearch/GoogleService-Info.plist
@@ -9,23 +9,23 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.bitsoev.GameSearch</string>
+	<string>com.bitsoev.gamesearchea</string>
 	<key>PROJECT_ID</key>
 	<string>gamersmap-a1154</string>
 	<key>STORAGE_BUCKET</key>
 	<string>gamersmap-a1154.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<true/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:514518021379:ios:e8615f874ca68044f92536</string>
+	<string>1:514518021379:ios:5eab64d4d6419feff92536</string>
 	<key>DATABASE_URL</key>
 	<string>https://gamersmap-a1154-default-rtdb.firebaseio.com</string>
 </dict>
