--- a/GameSearch/Info.plist
+++ b/GameSearch/Info.plist
@@ -4,5 +4,10 @@
 <dict>
 	<key>UILaunchStoryboardName</key>
 	<string>Launch Screen</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
